--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8">
+ <meta charset="UTF-8">
+
+
  <title>Document</title>
 
 <style>
@@ -87,6 +89,11 @@
 </style>
 </head>
 <body>
+
+
+<img src='ramen.jpg'>
+
+
  <div id="container">
  <section class="slideshow">
  <div class="content">
